=================================================
openadaptor3 production 3.4.3 Release Notes

See licence.txt for Licence information.
=================================================

Date: est. Steptember 2008
Author: openadaptor Core Team

openadaptor 3.4.3
=======

Connectors
==========

Processors
==========

Examples
========

Miscellaneous
=============

Bug Fixes
=========



=================================================
openadaptor3 production 3.4.2 Release Notes

See licence.txt for Licence information.
=================================================

Date: 18th July 2008
Author: openadaptor Core Team

openadaptor 3.4.2
=======

Connectors
==========

 * JDBCReadConnector & JDBCWriteConnector - preambleSQL and postambleSQL properties
   renamed to afterConnectSql and beforeDisconnectSql, respectively. Setters for 
   old properties have been deprecated.

 * JDBCReadConnector - new properties, preReadSql and postReadSql, get executed
   before the 'main' SQL that returns a result set, and after the result set
   has been read, respectively.

 * JDBCWriteConnector#connect - additional safety checks to allow a subclass 
   to use the connection from this class at the same time not using the sqlWriter.
   
 * JDBCWriteConnector - the two ISQLWriter implementations MapTableWriter and
   MapCallableStatementWriter have moved to the new 
   org.openadaptor.auxil.connector.jdbc.writer.map package. Configurations need
   to be adjusted accordingly:
   
   |------------------------------------------------------------------------------|
   |        OA 3.4.1                |            OA 3.4.2                         |    
   |------------------------------------------------------------------------------|
   |                                |                                             |
   |org.openadaptor.auxil.connector.|org.openadaptor.auxil.connector.             |  
   |jdbc.writer.MapTableWriter      |jdbc.writer.map.MapTableWriter               |