@@ -1,0 +1,26 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
+
+<beans>
+  <bean id="ReadConnector" class="org.openadaptor.core.connector.TestReadConnector">
+    <property name="id" value="ReadConnector"/>
+    <property name="maxSend" value="2"/>
+  </bean>
+
+  <bean id="Processor" class="org.openadaptor.core.processor.TestProcessor">
+    <property name="id" value="Processor"/>
+  </bean>
+
+  <bean id="WriteConnector" class="org.openadaptor.core.connector.TestWriteConnector">
+    <property name="id" value="WriteConnector"/>
+    <property name="expectedOutput" value="Exceptor(Processor(test data 1))"/>
+  </bean>
+
+  <bean id="Exceptor" class="org.openadaptor.core.processor.TestProcessor">
+    <property name="id" value="Exceptor"/>
+    <property name="exceptionFrequency" value="2"/>
+  </bean>
+
+  <bean id="ExceptionProcessor" class="org.openadaptor.core.connector.TestWriteConnector" />
+
+</beans>
